SFDCProject/src/objects/Workflow_Update_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dependent_Task_Template_Name__c</fullName>
        <formula>Dependent_Task_Template__r.Name</formula>
        <label>Dependent Task Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Task_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dependent Task Template</label>
        <referenceTo>Task_Template__c</referenceTo>
        <relationshipLabel>Workflow Update Rules (Dependent Task Template)</relationshipLabel>
        <relationshipName>Workflow_Update_Rules1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Name1__c</fullName>
        <label>Field Name1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name2__c</fullName>
        <label>Field Name2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name3__c</fullName>
        <label>Field Name3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name_del__c</fullName>
        <label>Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value1__c</fullName>
        <label>Field Value1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value2__c</fullName>
        <label>Field Value2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value3__c</fullName>
        <label>Field Value3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, all criteria for the parent task must be met.</inlineHelpText>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name1__c</fullName>
        <label>Object Name1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name2__c</fullName>
        <label>Object Name2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name3__c</fullName>
        <label>Object Name3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Task_Template_Name__c</fullName>
        <formula>Parent_Task_Template__r.Name</formula>
        <label>Parent Task Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Task_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Task Template</label>
        <referenceTo>Task_Template__c</referenceTo>
        <relationshipLabel>Workflow Update Rules</relationshipLabel>
        <relationshipName>Workflow_Update_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Field_Name1__c</fullName>
        <label>Task Field Name1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Field_Name2__c</fullName>
        <label>Task Field Name2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Field_Name3__c</fullName>
        <label>Task Field Name3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Field_Value1__c</fullName>
        <label>Task Field Value1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Field_Value2__c</fullName>
        <label>Task Field Value2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Field_Value3__c</fullName>
        <label>Task Field Value3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Category__c</fullName>
        <formula>TEXT(  Dependent_Task_Template__r.Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Category</label>
        <type>Text</type>
    </fields>
    <label>Workflow Update Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Task_Template_Name__c</columns>
        <columns>Dependent_Task_Template_Name__c</columns>
        <columns>Field_Name_del__c</columns>
        <columns>Field_Value__c</columns>
        <columns>Action__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Is_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name2__c</field>
            <operation>equals</operation>
            <value>Install_Branch_Id__c</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Workflow Update Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Update Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>